# ReSampler

./: .editorconfig  .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.autosave  CMakeLists.txt.user.4.10-pre1  CMakeLists.txt.user.4.9-pre1  FIRFilter.h  FIRFilter.h.autosave  FIRFilterAVX.h  README.md  ReSampler - Copy.sln  ReSampler - Copy.vcxproj  ReSampler-clang  ReSampler.cpp  ReSampler.cpp.autosave  ReSampler.h  ReSampler.sln  ReSampler.vcxproj  ReSampler.vcxproj.filters  SndInMemory.h  alignedmalloc.h  biquad.h  cmake_install.cmake  conversioninfo.cpp  conversioninfo.h  convertstage.h  csv.h  dff.h  ditherProfiles.md  ditherer.h  dsf.h  factorial.h  factorize.cpp  factorize.h  file_formats.htm  fileformats.htm  fraction.h  iqdemodulator.cpp  iqdemodulator.h  (+14 more)
AVX_Release/: ReSampler.iobj  ReSampler.ipdb
AVX_Release/ReSampler.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ReSampler.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
GroupDelayCorrection/: delayCorrection.md
enc_temp_folder/89ca5ed05f2329d828cf1bd115148b7f/: srconvert.h
libsndfile/include/: sndfile.h  sndfile.hh
libsndfilearm64_v8a/debug/src/: config.h
libsndfilearmeabi_v7a/debug/src/: config.h
tests/: analyze44k-96k.sh  dsf-investigation.sh  dsf.sh  make-spectrograms.sh  sweep44k.sh  sweeps-csv.sh  sweeps-dither-64f.sh  sweeps-dither-ss.sh  sweeps-dither.sh  sweeps.sh  test-legacy.sh  test-mt.sh  test-raw-input.sh  test.sh
x64/: decomposition.txt
x64/AVX_Release/: ReSampler.iobj  ReSampler.ipdb
x64/AVX_Release/ReSampler.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ReSampler.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Debug/: ReSampler.ilk  vc140.idb
x64/Debug/ReSampler.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ReSampler.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Release/: 96ksweep_to44k.H2  96ksweep_to44k.HDP  ReSampler.iobj  ReSampler.ipdb
x64/Release-Profiled/ReSampler.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ReSampler.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Release/ReSampler.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ReSampler.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Release_AVX/: ReSampler.iobj
x64/Release_AVX/ReSampler.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ReSampler.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/minGW-W64/: QuadMath-readme.txt
